crates/aranya-policy-compiler/tests/data/facts/create_too_few_values_1.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: fact literal does not match definition: The number of Fact values don't match the definition
  |
1 | fact Device[device_id int]=>{name string, email string}
  | ------------------------------------------------------- definition has 2 values but the expression has 1 values
...
4 |     create Device[device_id:1]=>{name: "bob"}
  |                                  ^^^^^^^^^^^ The number of Fact values don't match the definition
